fix(T-001): GOAL_TAG_MAP expansion fixes match scoring always 0.0